--- a/css/styles.css
+++ b/css/styles.css
@@ -140,39 +140,6 @@ noscript {
     border-right: 600px solid transparent;
     border-top: 45px solid #4679BD;
 }
-/*
-.triangle-down-right {
-    height: 0;
-    padding-top:25%;
-    overflow: hidden;
-}
-.triangle-down-right:after {    
-        content: "";
-    display: block;
-    width: 0px;
-    height: 0px;
-
-    border-right: 580px solid #4679BD;
-    border-top: 30px solid transparent;
-    margin-top: -180px;
-}
-
-
-.triangle-down-right2 {
-    height: 0;
-    padding-top:25%;
-    overflow: hidden;
-}
-.triangle-down-right2:after {
-    content: "";
-    display: block;
-    width: 0px;
-    height: 0px;
-    margin-top: -150px;
-    border-top: 50px solid transparent;
-    border-left: 1000px solid #4679BD;
-    margin-left: -620px;
-}*/
 
 /*
  * Original Code From: https://github.com/mqchen/jquery.diamonds.js
@@ -188,8 +155,8 @@ noscript {
     margin: 14.6447%;
     border: 1px solid transparent;
 }
-                
-                
+
+
 .diamond-box-inner {
     transform: rotate(-45deg);
     transform-origin: center center 0px;
@@ -198,6 +165,18 @@ noscript {
     height: 141.421%;
     margin: -20.7107% 0px 0px -20.7107%;
 }
+
+.diamond-box-inner a:hover:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: none repeat scroll 0% 0% rgba(255, 255, 255, 0.5);
+}
+
 /*****************END OF REFERENCED CODE *******************/
 
 .imgRecentThumb {
@@ -213,6 +192,13 @@ noscript {
     margin: auto;
 }
 
+#artistImgDiamond {
+    float: left;
+    height: 300px; 
+    width: 300px;
+    margin: auto;
+}
+
 .artImgTmb {
     height: auto; 
     width: 200px;
@@ -225,7 +211,7 @@ noscript {
 
 /*** Modal **/
 #expandedImg {
-    height: 800px;
+    height: 600px;
     width: auto;
 }
 
@@ -278,9 +264,67 @@ form div .btn {
     margin: auto;
 }
 
+.contactFormCol {
+    color: #fff;
+}
+
+#contactMsgSent, #contactMsgNotSent {
+    font-size: 18px;
+    
+}
+
+#contactMsgSent {
+    color: #0A8926;
+}
+
+#contactMsgNotSent {
+    color: #f00;
+}
 
 a:active {
     color: #f00;
     background-color: #00FF00;    
 }
 
+
+/****** ABOUT PAGE ******/
+.aboutRow {
+    background-color: #ccc;
+    padding-top: 2em;
+    padding-bottom: 3em;
+        
+}
+
+.aboutRow p {
+    font-size: 15px;
+    line-height: 1.75em;
+    padding: 0em 5em 1.1em 0.4em;
+}
+
+/*
+ * Original Code from: codepen
+ * Reference: http://codepen.io/danielsmcclintock/pen/ljeis
+ */
+.aboutRow {
+	position: relative;
+        height: 100%;
+}
+.aboutRow {
+	float: left;
+	z-index: 1;
+}
+
+.aboutRow:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	width: 0;
+	height: 0;
+}
+
+.aboutRow:after {
+	right: 0;
+	border-left: 400px solid #ccc; /* razorblade color */
+	border-top: 370px solid #222; /* page background color */
+}
+/*****************END OF REFERENCED CODE *******************/
